--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("ttps://fonts.googleapis.com/css2?family=Rambla:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
   --primary-color: #5598fd;
@@ -275,4 +275,4 @@ img {
   bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
-} 
+}
