--- a/style.css
+++ b/style.css
@@ -267,12 +267,9 @@ img {
   margin-top: 20px;
   text-align: left;
 }
-.credits {
-  text-align: center;
-  font-size: 12px;
-  color: #c2c2c2;
+.webcam-map {
   position: absolute;
-  bottom: 30px;
-  left: 50%;
+  bottom: 100px;
+  left: 0%;
   transform: translateX(-50%);
 } 
