--- a/style.css
+++ b/style.css
@@ -267,3 +267,12 @@ img {
   margin-top: 20px;
   text-align: left;
 }
+.credits {
+  text-align: center;
+  font-size: 12px;
+  color: #c2c2c2;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+} 
