--- a/style.css
+++ b/style.css
@@ -1,81 +1,55 @@
-@import url("https://fonts.googleapis.com/css2?family=Rambla:wght@700&display=swap");
+
+
+:root {
+  --primary-color: #5598fd;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Rambla', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-
-.header {
-  display: text;
-  font-size: 40px;
-  font-weight: 400;
-  line-height: 1;
-  margin-center: 660px;
-  padding-center: 606px;
-}
-.weather-icon {
-  width: 19%;
-  height: 150px;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 100px;
-  top: 58.1%;
-}
-.weather-icon #icon {
-  width: 80%;
-  object-fit: cover;
-}.temperature {
+body {
   display: flex;
-  top: 58.1%;
+  justify-content: center;
+  min-height: 100vh;
+  min-width: 1000px;
+  padding: 50px;
+  background: var(--primary-color);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./images/cd.jpg");
+  background-size: cover;
+  background-position: center;
+  transition: background-image 0.3s ease;
+  font-family: Interstate;
 }
-.temperature #temp {
-  font-size: 70px;
-  font-weight: 100;
-  line-height: 1;
-}
-.temperature span {
-  font-size: 40px;
-  margin-top: -10px;
-  display: block;
-}
-.divider {
+img {
   width: 100%;
-  height: 1px;
-  background: #e9ecef;
-  margin: 20px 0;
 }
-.condition-rain {
-  font-size: 20px;
-  text-transform: capitalize;
-}
-.condition-rain div {
+.wrapper {
   display: flex;
-  align-items: center;
-  gap: 10px;
-  margin-bottom: 10px;
+  width: 1200px;
+  min-width: 900px;
+  border-radius: 20px;
+  overflow: hidden;
 }
-.condition-rain div i {
-  width: 20px;
-}
------------------------------------
-
 .sidebar {
   width: 30%;
   min-width: 250px;
-  padding: 50px;
+  padding: 20px;
   background: rgba(255, 255, 255, 0.815);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-----------------------------------------
+
 .search {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 0px;
-  margin-top: 0px;
+  margin-bottom: 30px;
+  margin-top: 20px;
   position: relative;
 }
 .search input {
@@ -84,7 +58,7 @@
   border: 1px solid #ced4da;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
-  padding: 0 30px;
+  padding: 0 15px;
   font-size: 14px;
   color: #495057;
 }
@@ -92,18 +66,10 @@
   outline: none;
   border: 1px solid var(--primary-color);
 }
-.fas fa-search {
-  width: 5%
-  display: flex;
-  padding-top: 200px;
-  position: relative;
-  border: 5px;
-  color: #f1f1f1;
-}
 .search button {
   min-width: 40px;
   height: 40px;
-  border: 3px;
+  border: none;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   background: var(--primary-color);
@@ -137,33 +103,118 @@
 .search ul li.active {
   background-color: #f1f1f1;
 }
-----------------------------------
+.weather-icon {
+  width: 100%;
+  height: 150px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 100px;
+}
+.weather-icon #icon {
+  width: 80%;
+  object-fit: cover;
+}
+.temperature {
+  display: flex;
+}
+.temperature #temp {
+  font-size: 70px;
+  font-weight: 100;
+  line-height: 1;
+}
+.temperature span {
+  font-size: 40px;
+  margin-top: -10px;
+  display: block;
+}
+.divider {
+  width: 100%;
+  height: 1px;
+  background: #e9ecef;
+  margin: 20px 0;
+}
+.condition-rain {
+  font-size: 12px;
+  text-transform: capitalize;
+}
+.condition-rain div {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.condition-rain div i {
+  width: 20px;
+}
+.location {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  gap: 10px;
+  margin-top: 10px;
+}
+.main {
+  width: 100%;
+  min-width: 400px;
+  padding: 20px 40px;
+  background-color: #f6f6f8;
+  position: relative;
+  padding-bottom: 90px;
+}
 
+.main nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.main nav .options {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+.main nav .options button {
+  border: none;
+  background: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: #495057;
+  cursor: pointer;
+  text-transform: capitalize;
+}
+.main nav .options button.active {
+  color: var(--primary-color);
+}
+
+.main nav .units button {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #1a1a1a;
+  background-color: #fff;
+}
 .main nav .units button.active {
   color: #fff;
   background-color: #1a1a1a;
 }
-
 .main .cards {
   display: flex;
   flex-wrap: wrap;
-  gap: 25px;
+  gap: 20px;
   margin-top: 50px;
 }
 
 .cards .card {
-  width: 120px;
-  height: 150px;
+  width: 100px;
+  height: 130px;
   border-radius: 20px;
-  color: #111111;
-  background-color: #f1f1f1;
+  color: #1a1a1a;
+  background-color: #fff;
   text-align: center;
   padding: 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
-
 .card h2 {
   font-size: 15px;
   font-weight: 600;
@@ -183,11 +234,10 @@
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 50px;
-  no.-of-elements: 6;
 }
 .highlights .heading {
   width: 100%;
-  font-size: 30px;
+  font-size: 20px;
   font-weight: 600;
   text-transform: capitalize;
 }
@@ -218,3 +268,12 @@
   margin-top: 20px;
   text-align: left;
 }
+.credits {
+  text-align: center;
+  font-size: 12px;
+  color: #c2c2c2;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+} 
