--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
   --primary-color: #5598fd;
@@ -8,7 +7,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
+  font-family: "Interstate", sans-serif;
 }
 body {
   display: flex;
@@ -30,6 +29,7 @@ img {
   display: flex;
   width: 1200px;
   min-width: 900px;
+  height: 1200px
   border-radius: 20px;
   overflow: hidden;
 }
